# kvbufrd

./: .autotools  .gitignore  Makefile.am  bufrdump_all.sh  changelog  cleanbufrdb.sql  configure.ac  container-build.sh  hasaliastest.sh  kvbufrcpy.sh  kvbufrd_svv.conf  kvbufrdbadmin.sh  kvsynopcpy.sql  version.sh
debian_files/: Makefile.am  Makefile.in  changelog  control  copyright  kvbufr.postinst  kvbufrconf.install  kvbufrconf2.dirs  kvbufrconf2.install  kvbufrd.cron.d  kvbufrd.dirs  kvbufrd.install  kvbufrd.postinst  kvbufrd.postrm  postinst  postrm  rules
docker/: entrypoint.sh
docker/bionic/: kvbufrd.dockerfile
docker/focal/: devcontainer-debianbuild.dockerfile  devcontainer.dockerfile  kvbufrd.dockerfile
docker/noble/: devcontainer-debianbuild.dockerfile  devcontainer.dockerfile  kvbufrd.dockerfile
ecmwf/: Makefile.am  my_build_library  patch.p1  test.sh
etc/: kvbufrconf.conf.template
m4/: googletest.m4  libkvcpp.m4
mk/: debian.mk
share/bufrtables/: B0000000000074002001.TXT  B0000000000088013001.TXT  B0000000000098007001.TXT  C0000000000059003003.TXT  D0000000000000014000.TXT  D0000000000074002001.TXT  D0000000000088013001.TXT  D0000000000098007001.TXT  Makefile.am  Makefile.in
share/proto/: result.proto
src/: App.cc  App.h  BUFRparam.cc  BUFRparam.h  BufferData.cc  BufferData.h  BufferWorker.cc  BufferWorker.h  BufrData.cc  BufrData.h  BufrWorker.cc  BufrWorker.h  CommandBase.cc  CommandBase.h  CommandPriority2Queue.cc  CommandPriority2Queue.h  CommandPriorityQueue.cc  CommandPriorityQueue.h  CommandQueue.cc  CommandQueue.h  ConfApp.cc  ConfApp.h  ConfMaker.cc  ConfMaker.h  CreateBufr.h  Data.cc  Data.h  DataElementList.cc  DataElementList.h  DataList.cc  DataList.h  DataReceiver.cc  DataReceiver.h  DbQuery.cc  DbQuery.h  GetDataThread.cc  GetDataThread.h  Indent.h  InitLogger.cc  InitLogger.h  (+125 more)
src/bufr/: AreaDesignator.cc  AreaDesignator.h  BUFRparam.cc  BUFRparam.h  BufrHelper.cc  BufrHelper.h  BufrValueHelper.cc  BufrValueHelper.h  EncodeBufr301004.cc  EncodeBufr301004.h  EncodeBufr301011.cc  EncodeBufr301011.h  EncodeBufr301012.cc  EncodeBufr301012.h  EncodeBufr301021.cc  EncodeBufr301021.h  EncodeBufr301036.cc  EncodeBufr301036.h  EncodeBufr301089.cc  EncodeBufr301089.h  EncodeBufr301090.cc  EncodeBufr301090.h  EncodeBufr301093.cc  EncodeBufr301093.h  EncodeBufr301126.cc  EncodeBufr301126.h  EncodeBufr301150.cc  EncodeBufr301150.h  EncodeBufr302001.cc  EncodeBufr302001.h  EncodeBufr302004.cc  EncodeBufr302004.h  EncodeBufr302005.cc  EncodeBufr302005.h  EncodeBufr302021.cc  EncodeBufr302021.h  EncodeBufr302023.cc  EncodeBufr302023.h  EncodeBufr302024.cc  EncodeBufr302024.h  (+95 more)
src/gtest/: Makefile.am
src/kvbufrconf/: ConfApp.cc  ConfApp.h  ConfMaker.cc  ConfMaker.h  Makefile.am  Makefile.in  kvbufrconf.cc  kvbufrconfOptions.cc  kvbufrconfOptions.h  kvbufrconfcmpOptions.cc  kvbufrconfcmpOptions.h  tblStInfoSysNetworkStation.cc  tblStInfoSysNetworkStation.h  tblStInfoSysObsPgmH.cc  tblStInfoSysObsPgmH.h  tblStInfoSysParam.cc  tblStInfoSysSensorInfo.cc  tblStInfoSysSensorInfo.h  tblStInfoSysStation.cc  tblStInfoSysStation.h  tblStInfoSysStationOutmessage.cc  tblStInfoSysStationOutmessage.h  tblStInfoSysWigosStation.cc  tblStInfoSysWigosStation.h
src/test/: ReadDataFile.cc  ReadDataFile.h  kvBufferEncodeTest.cc  kvBufferEncodeTestConf.h  kvBufrEncodeTest.cc  kvBufrEncodeTest.conf  kvBufrEncodeTestConf.h  precip_13310_302_20121114T06
