EXTRA_DIST = \
	po/POTFILES.in \
	changelog \
	compat \
	control \
	copyright \
	docs \
	kvbufrd.cron.d \
	kvbufrd.dirs \
	kvbufrd.install \
	kvbufrd.postinst \
	kvbufrd.postinst.debhelper \
	kvbufrd.postrm \
	kvbufrd.postrm.debhelper \
	preinst \
	prerm \
	README.Debian \
	rules \
	runbg \
	templates 
